Weapon type configs

--- a/src/config/weapons/rocket_launcher.json
+++ b/src/config/weapons/rocket_launcher.json
@@ -10,8 +10,10 @@
     "damage": 10,
     "effectChance": 0,
     "effectDuration": 0,
+    "maxAmount": 1,
     "maxLevel": 10,
     "piercing": 0,
+    "range": 500,
     "rarity": 1,
     "size": 1,
     "speed": 10
